--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
+            <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12 tablero">
                 <h1>JUEGO DE BUSCANIMAS</h1>
-                <div class="game">
-                    <div id="tableroBuscaminas"></div>
-                </div>
+                <div id="tableroBuscaminas"></div>
                 <div class="reinicio">
-                    <button class="btn btn-success" id="reinicio">REINICIAR</button>
+                    <button class="btn btn-success reinicio" id="reinicio" disabled>REINICIAR</button>
                 </div>
             </div>
         </div>
@@ -28,7 +26,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="assets/js/main.js"></script>
+    <script type="text/javascript" src="assets/js/procedimental.js"></script>
 </body>
 
 </html>
