paradigma poo-clases

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container"> 
         <div class="row">
             <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12 tablero">
                 <h1>JUEGO DE BUSCANIMAS</h1>
-                <div id="tableroBuscaminas"></div>
+                <div id="tableroBuscaminas">
+                    <div id="tablero"></div>
+                </div>
                 <div class="reinicio">
                     <button class="btn btn-success reinicio" id="reinicio" disabled>REINICIAR</button>
                 </div>
@@ -26,7 +28,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="assets/js/procedimental.js"></script>
+    <!-- <script type="text/javascript" src="assets/js/procedimental.js"></script> -->
+    <script type="text/javascript" src="assets/js/poo-clases.js"></script>
 </body>
 
 </html>
